syntax = "proto3";

package rssflow.feed;

import "google/protobuf/timestamp.proto";

message Feed {
  string title = 1;
  string id = 2;
  google.protobuf.Timestamp updated = 3;
  repeated Person authors = 4;
  repeated Entry entries = 5;
}

message Entry {
  string title = 1;
  string id = 2;
  google.protobuf.Timestamp updated = 3;
  repeated Person authors = 4;
  repeated Link links = 5;
  Text summary = 6;
  Content content = 7;
}

message Content {
  string value = 1;
  string lang = 2;
  string content_type = 3;
}

message Text {
  string value = 1;
  TextType type = 2;
}

enum TextType {
  TEXT = 0;
  HTML = 1;
  XHTML = 2;
}

message Link {
  string href = 1;
  string rel = 2;
}

message Person {
  string name = 1;
  string email = 2;
  string uri = 3;
}

message StringValue {
  string value = 1;
}